# turbo-axum-rs

./: .gitignore  Cargo.toml
src/: filters.rs  lib.rs  turbo_frame.rs  turbo_page.rs  turbo_stream.rs  turbo_stream_builder.rs
src/extractors/: accept_turbo_stream.rs  extract_turbo_frame.rs  mod.rs
templates/: turbo-frame.html  turbo-stream-element.html  turbo-stream-three-elements.html  turbo-stream-two-elements.html
