[package]
name = "turbo-axum"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.0", features = ["with-axum"] }
askama_axum = { version = "0.3.0" }
async-trait = "0.1.64"
axum = { version = "0.6.0", features = ["headers", "macros"] }
