[package]
name = "turbo-axum"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = { version = "0.4.0" }
async-trait = "0.1.74"
axum = { version = "0.7.2", features = ["macros"] }
